--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,59 @@
+body{
+    font-size: 30px;
+}
 
-/* 
+.elInput{
+border: none;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.toDos{
+    display: flex;
+    justify-content: space-around;
+    color: #36353557;
+    font-size: 100px;
+}
 
-*/
+.container{
+    background: white;
+}
+
+.does{
+    padding-inline-start: 60px;
+    padding-top: 1%;
+
+}
+
+input{
+    width: 100%;
+    height: 60px;
+    margin-left: 0px !important;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    padding-inline-start: 60px;
+    
+}
+
+.contenedor {
+    width: 70%;
+    margin: 0 auto;
+    box-shadow: 0px 10px 30px black;
+  
+    .does:hover .deleteBoton {
+      display: block;
+    }
+  
+    .deleteBoton {
+      display: none;
+    }
+  }
+
+p{
+    background: white;
+}
+
+.footer{
+    font-size: 20px;
+    padding: 10px;
+    color:#36353557
+}
+
